binary_target_variables = [
  "all_dependent_configs",
  "allow_circular_includes_from",
  "arflags",
  "asmflags",
  "asmppflags",
  "cflags",
  "cflags_c",
  "cflags_cc",
  "cflags_objc",
  "cflags_objcc",
  "check_includes",
  "complete_static_lib",
  "configs",
  "cppflags",
  "cppflags_c",
  "cppflags_cc",
  "cppflags_objc",
  "cppflags_objcc",
  "data",
  "data_deps",
  "defines",
  "deps",
  "include_dirs",
  "inputs",
  "ldflags",
  "lib_dirs",
  "libs",
  "output_dir",
  "output_extension",
  "output_name",
  "precompiled_header",
  "precompiled_source",
  "public",
  "public_configs",
  "public_deps",
  "sources",
  "sys_include_dirs",
  "visibility",
]

codegen_variables = [
  "is_codegen",
]

config_variables = [
  "arflags",
  "asmflags",
  "asmppflags",
  "cflags",
  "cflags_c",
  "cflags_cc",
  "cflags_objc",
  "cflags_objcc",
  "configs",
  "cppflags",
  "cppflags_c",
  "cppflags_cc",
  "cppflags_objc",
  "cppflags_objcc",
  "defines",
  "include_dirs",
  "ldflags",
  "lib_dirs",
  "libs",
  "precompiled_header",
  "precompiled_source",
  "sys_include_dirs",
]

external_deps_variables = [
  "external_deps",
  "public_external_deps",
]

pkg_config_variables = [
  "cflags",
  "defines",
  "include_dirs",
  "ldflags",
  "libs",
  "lib_dirs",
  "extra_args",
  "extra_cflags",
  "extra_defines",
  "extra_include_dirs",
  "extra_ldflags",
  "extra_libs",
  "extra_lib_dirs",
  "ignore_libs",
  "packages",
  "static",
  "visibility",
]

lint_variables = [
  "enable_lint",
  "filter_lint_platforms",
  "sources_assignment_filter",
]

search_variables = [
  "depth",
  "regex",
  "root_dir",
  "source_dirs",
  "sources_assignment_filter",
]

style_variables = [
  "enable_style",
  "sources_assignment_filter",
  "style_depth",
  "style_dirs",
  "style_mode",
  "style_regex",
  "style_root_dir",
]

test_variables = [
  "pre_test",
  "test_args",
  "test_pool",
  "test_runner",
  "test_runner_args",
]

test_wrapper_variables = test_variables + [
  "is_one_test_exe_per_file",
  "sources_assignment_filter",
  "test_deps",
  "test_dir",
  "test_extension",
  "test_name",
  "unittests",
]

target_wrapper_variables = binary_target_variables +
                           codegen_variables +
                           external_deps_variables +
                           lint_variables +
                           style_variables +
                           test_wrapper_variables + [
                             "filter_platforms",
                             "sources_assignment_filter",
                           ]

toolchain_variables = [
  "alink_outputs",
  "ar",
  "asm_outputs",
  "cc",
  "compile_outputs",
  "cxx",
  "deps",
  "executable_extension",
  "extra_asmflags",
  "extra_cflags",
  "extra_cflags_c",
  "extra_cflags_cc",
  "extra_cflags_objc",
  "extra_cflags_objcc",
  "extra_ldflags",
  "ld",
  "libs_section_prefix",
  "libs_section_postfix",
  "link_outputs",
  "loadable_module_extension",
  "object_extensions",
  "pool",
  "post_asm",
  "post_alink",
  "post_compile",
  "post_link",
  "post_solink",
  "rebuild_define",
  "shlib_extension",
  "solink_libs_section_prefix",
  "solink_libs_section_postfix",
  "solink_module_outputs",
  "solink_outputs",
  "source_extensions_asm",
  "source_extensions_cc",
  "source_extensions_cxx",
  "source_extensions_ld",
  "source_extensions_objc",
  "source_extensions_objcxx",
  "strip",
  "toolchain_args",
  "use_ccache",
]

toolchain_variables_for_lint = toolchain_variables + [
  "extra_asmppflags",
  "extra_cppflags",
  "extra_cppflags_c",
  "extra_cppflags_cc",
  "extra_cppflags_objc",
  "extra_cppflags_objcc",
  "lintasm",
  "lintcc",
  "lintcxx",
] - [
  "alink_outputs",
  "ar",
  "asm_outputs",
  "compile_outputs",
  "extra_ldflags",
  "ld",
  "libs_section_prefix",
  "libs_section_postfix",
  "link_outputs",
  "object_extensions",
  "post_asm",
  "post_alink",
  "post_compile",
  "post_link",
  "post_solink",
  "solink_libs_section_prefix",
  "solink_libs_section_postfix",
  "solink_module_outputs",
  "solink_outputs",
  "source_extensions_ld",
  "strip",
  "use_ccache",
]

lint_toolchain_variables = [
  "depfile",
  "deps",
  "depsformat",
  "executable_extension",
  "extra_asmppflags",
  "extra_cppflags",
  "extra_cppflags_c",
  "extra_cppflags_cc",
  "extra_cppflags_objc",
  "extra_cppflags_objcc",
  "lintasm",
  "lintcc",
  "lintcxx",
  "loadable_module_extension",
  "pre_lintasm",
  "pre_lintcc",
  "pre_lintcxx",
  "pre_lintobjc",
  "pre_lintobjcxx",
  "pool",
  "post_lintasm",
  "post_lintcc",
  "post_lintcxx",
  "post_lintobjc",
  "post_lintobjcxx",
  "rebuild_define",
  "shlib_extension",
  "source_extensions_asm",
  "source_extensions_cc",
  "source_extensions_cxx",
  "source_extensions_objc",
  "source_extensions_objcxx",
  "toolchain_args",
]
